--- a/rideSharing/Base.lproj/Main.storyboard
+++ b/rideSharing/Base.lproj/Main.storyboard
@@ -178,6 +178,9 @@
                                     <constraint firstAttribute="height" constant="60" id="q6a-VS-pab"/>
                                 </constraints>
                                 <state key="normal" image="centerMapBtn"/>
+                                <connections>
+                                    <action selector="onCenterMapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JKW-Tn-1nz"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
